Update assessor statuses, specifically separate out dom in two statuses
